--- a/_posts/2021-01-01-new-ec.md
+++ b/_posts/2021-01-01-new-ec.md
@@ -9,4 +9,4 @@ tags:
 
 The alumni chapter has voted in a new Executive Council!
 
-<img src="../assets/images/2021_exec_council.png"/>
+![New Executive Council]("{{ site.baseurl }}/assets/images/2021_exec_council.png")
